--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -221,7 +221,7 @@ Style/LineEndConcatenation:
 Metrics/LineLength:
   Description: 'Limit lines to 100 characters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
-  Max: 100
+  Max: 120
   Enabled: true
 
 Metrics/MethodLength:
@@ -302,6 +302,10 @@ Style/OpMethod:
 Metrics/ParameterLists:
   Description: 'Avoid parameter lists longer than three or four parameters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#too-many-params'
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Description: 'A complexity metric geared towards measuring complexity for a human reader.'
   Enabled: false
 
 Style/PercentLiteralDelimiters:
