--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,13 @@
 AllCops:
+  TargetRubyVersion: 2.3
   Exclude:
     - db/schema.rb
+    - config/initializers/devise.rb
+    - bin/*
+    - config.ru
+    - config/unicorn/*
+    - db/migrate/*
+    - spec/spec_helper.rb
 
 Style/AccessorMethodName:
   Description: Check the naming of accessor methods for get_/set_.
@@ -48,7 +55,7 @@ Style/CharacterLiteral:
 
 Style/ClassAndModuleChildren:
   Description: 'Checks style of children classes and modules.'
-  Enabled: true
+  Enabled: false
   EnforcedStyle: nested
 
 Metrics/ClassLength:
@@ -58,6 +65,11 @@ Metrics/ClassLength:
 Metrics/ModuleLength:
   Description: 'Avoid modules longer than 100 lines of code.'
   Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/**
+    - config/*
 
 Style/ClassVars:
   Description: 'Avoid the use of class variables.'
@@ -100,7 +112,7 @@ Rails/Delegate:
   Description: 'Prefer delegate method for delegations.'
   Enabled: false
 
-Style/DeprecatedHashMethods:
+Style/PreferredHashMethods:
   Description: 'Checks for use of deprecated Hash methods.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#hash-key'
   Enabled: false
@@ -219,10 +231,14 @@ Style/LineEndConcatenation:
   Enabled: false
 
 Metrics/LineLength:
-  Description: 'Limit lines to 100 characters.'
+  Description: 'Limit lines to 120 characters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
   Max: 120
   Enabled: true
+  Exclude:
+    - Gemfile
+    - spec/support/webmock_requests.rb
+    - lib/tasks/*.rake
 
 Metrics/MethodLength:
   Description: 'Avoid methods longer than 10 lines of code.'
@@ -287,6 +303,16 @@ Style/NumericLiterals:
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#underscores-in-numerics'
   Enabled: false
 
+Style/NumericPredicate:
+ Description: >-
+                This cop checks for usage of comparison operators
+                (`==`, `!=`, `>`, `<`) to test numbers as
+                zero, nonzero, positive, or negative.
+                These can be replaced by their respective predicate methods.
+                The cop can also be configured to do the reverse.
+ StyleGuide: 'http://www.rubydoc.info/gems/rubocop/RuboCop/Cop/Style/NumericPredicate'
+ Enabled: false
+
 Style/OneLineConditional:
   Description: >-
                  Favor the ternary operator(?:) over
@@ -302,10 +328,6 @@ Style/OpMethod:
 Metrics/ParameterLists:
   Description: 'Avoid parameter lists longer than three or four parameters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#too-many-params'
-  Enabled: false
-
-Metrics/PerceivedComplexity:
-  Description: 'A complexity metric geared towards measuring complexity for a human reader.'
   Enabled: false
 
 Style/PercentLiteralDelimiters:
@@ -377,25 +399,13 @@ Style/StringLiterals:
 Style/TrailingCommaInArguments:
   Description: 'Checks for trailing comma in argument lists.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas'
-  EnforcedStyleForMultiline:
-    - consistent_comma
-    - no_comma
-  SupportedStyles:
-    - comma
-    - consistent_comma
-    - no_comma
+  EnforcedStyleForMultiline: comma
   Enabled: true
 
 Style/TrailingCommaInLiteral:
   Description: 'Checks for trailing comma in array and hash literals.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas'
-  EnforcedStyleForMultiline:
-    - consistent_comma
-    - no_comma
-  SupportedStyles:
-    - comma
-    - consistent_comma
-    - no_comma
+  EnforcedStyleForMultiline: comma
   Enabled: true
 
 Style/TrivialAccessors:
